# Model_Regression_Detector

./: .env.example  .gitignore  .vercelignore  CLAUDE.md  README.md  pyproject.toml  render.yaml  vercel.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  eval.yml
api/: index.py  requirements.txt
config/: settings.yaml
data/: seed.db
datasets/ticket_router/: v1.json
docs/: adding-a-feature.md  architecture.md  ci.md  deploy-render.md  deploy-vercel.md  feature-specification-audit.md  multi-feature-audit.md  onboarding-mvp-implementation-plan.md  post-onboarding-flow.md  self-service-onboarding-design.md  spec-driven-feature-design.md  spec-driven-implementation-plan.md  support-ticket-router-onboarding.md  unified-platform-flow.md  unified-platform-implementation-plan.md  ux-hierarchy-audit.md  web-frontend.md
features/sentiment_poc/: feature.yaml
features/sentiment_poc/datasets/sentiment_poc/: v1.json
features/sentiment_poc/prompts/sentiment_poc/: v1.yaml
prompts/email_classifier/: v1.yaml
prompts/ticket_router/: v1.yaml
scripts/: start_server.py
src/mrds/activation/: __init__.py  bootstrap.py  discovery.py  errors.py  install.py  lifecycle.py
src/mrds/api/: __init__.py  __main__.py  app.py  runtime.py  serializers.py
src/mrds/cli/: exit_codes.py  main.py  runtime.py
src/mrds/cli/commands/: __init__.py  compare.py  evaluate.py  promote_baseline.py  report.py
src/mrds/config/: settings.py
src/mrds/core/: errors.py  interfaces.py  registry.py
src/mrds/dashboard/: _shared.py  app.py  data.py  help_text.py
src/mrds/dashboard/pages/: 1_Runs.py  2_Trends.py  3_Compare.py  3_Regressions.py  4_Baselines.py  4_Regressions.py  5_Baselines.py  6_Dataset.py
src/mrds/datasets/: __init__.py  loader.py  registry.py
src/mrds/db/: __init__.py  connection.py  errors.py  migrations.py  records.py  repositories.py  schema.sql  store.py
src/mrds/db/backends/: __init__.py  base.py  factory.py  libsql.py  sqlite.py
src/mrds/demo/: __init__.py  __main__.py  client.py  seed.py  ticket_client.py
src/mrds/features/: __init__.py
src/mrds/features/email_classifier/: __init__.py  feature.py  schema.py  scorers.py
src/mrds/features/spec/: __init__.py  feature.py  loader.py  models.py  scorers.py  spec.py
src/mrds/features/ticket_router/: __init__.py  feature.py  schema.py  scorers.py
src/mrds/llm/: __init__.py  anthropic_client.py  base.py  errors.py  openai_client.py
src/mrds/onboarding/: __init__.py  app.py  errors.py  inference.py  scaffold.py  writer.py
src/mrds/prompts/: __init__.py  errors.py  loader.py  models.py  registry.py  validation.py
tests/: conftest.py
tests/unit/: test_activation.py  test_api.py  test_cli.py  test_config.py  test_dashboard.py  test_dataset_versions_db.py  test_datasets.py  test_db.py  test_demo.py  test_email_classifier.py  test_evaluation_engine.py  test_feature_registry.py  test_feature_specs_db.py  test_libsql_backend.py  test_lifecycle.py  test_onboarding_end_to_end.py  test_onboarding_inference.py  test_onboarding_scaffold.py  test_onboarding_writer.py  test_prompt_versions_db.py  test_prompts.py  test_spec_feature.py  test_spec_models.py  test_spec_poc.py  test_spec_scorers.py  test_storage_backend.py  test_ticket_router.py  test_workflows.py
web/: README.md
web/app/: error.tsx  not-found.tsx
web/components/: create-wizard.tsx
web/lib/: api.ts
